Incorrect object dimension setting when using modifiers #115291

Closed
opened 2023-11-23 10:19:20 +01:00 by Alaska · 2 comments
Member

System Information
Operating system: macOS-14.0-arm64-arm-64bit
Graphics card: Metal API Apple M1 Pro 1.2

Blender Version
Broken: 4.1.0+Alpha branch main, commitdate: 2023-11-23, hash: 609cb2394d7a4d
Worked: 4.0.1 Release

Short description of error
Typing in new dimensions on an object with a modifier will result in the wrong dimensions being applied to the object.

Exact steps for others to reproduce the error

  1. Add a modifier to an object that changes it's dimensions (I used a cast modifier on a subdivided cube).
  2. Open up the side panel in the 3D viewport (Press N) and try typing new dimensions for your object.
  3. Notice that the dimensions you type in are not the dimensions you get when you press enter. It seems what's happening is we're adjusting the dimensions of the object before any modifiers, rather than after the modifiers.

I have attached a video demonstrating the issue.

**System Information** Operating system: macOS-14.0-arm64-arm-64bit Graphics card: Metal API Apple M1 Pro 1.2 **Blender Version** Broken: 4.1.0+Alpha branch main, commitdate: 2023-11-23, hash: `609cb2394d7a4d` Worked: 4.0.1 Release **Short description of error** Typing in new dimensions on an object with a modifier will result in the wrong dimensions being applied to the object. **Exact steps for others to reproduce the error** 1. Add a modifier to an object that changes it's dimensions (I used a cast modifier on a subdivided cube). 2. Open up the side panel in the 3D viewport (Press `N`) and try typing new dimensions for your object. 3. Notice that the dimensions you type in are not the dimensions you get when you press enter. It seems what's happening is we're adjusting the dimensions of the object before any modifiers, rather than after the modifiers. I have attached a video demonstrating the issue.
Alaska added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-23 10:19:21 +01:00
Member

14eb08c3a5 is possibly related

14eb08c3a534b07378faccf20558ed5d46a006dd is possibly related
Pratik Borhade added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-11-23 11:27:10 +01:00
Member
cc @HooglyBoogly
Hans Goudey self-assigned this 2023-11-27 04:57:38 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-11-27 04:57:43 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-27 05:09:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115291
No description provided.