Fix #115291: Object dimension setting ignores modifiers

The factor needs to be calculated against the evaluated bounds rather
than the bounds of the original geometry. Error in 1cbd0f5a8583a898ebba.